[tool.poetry]
name = "fastapi_inertia"
version = "0.1.0"
description = ""
authors = ["Hugo Mortreux <70602545+hxjo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
requests = "^2.31.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
