[tool.poetry]
name = "fastapi-inertia"
version = "0.1.3"
description = "An implementation of the Inertia protocol for FastAPI."
authors = ["Hugo Mortreux <70602545+hxjo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hxjo/fastapi-inertia"
homepage = "https://github.com/hxjo/fastapi-inertia"
keywords = ["inertia", "inertiajs", "fastapi", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
    { include = "inertia"}
]
exclude = ["inertia/tests/**/*"]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.29.0"
mypy = "^1.9.0"
ruff = "^0.4.1"
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
types-requests = "^2.31.0.20240406"
itsdangerous = "^2.2.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
strict = true
check_untyped_defs = true
